# RaceBench

./: .gitignore  .gitmodules  LICENSE  README.md  bug.py  exhaust  gdb_utils.py  inject.py  main.py  parloc.py  prepare.sh  sample-config.json  stat_view.py
builder/: gen.py  sample-Makefile  sample-rb-build
evaluation/: README.md  afl-system-config  fuzz-all.py  prepare.sh
evaluation/fuzzers/: list.txt
evaluation/fuzzers/AFL/: compile_env.sh  fuzz.sh
evaluation/fuzzers/AFL-maple/: compile_env.sh  fuzz.sh
evaluation/fuzzers/AFLplusplus/: compile_env.sh  fuzz.sh
evaluation/fuzzers/MOpt-AFL/: compile_env.sh  fuzz.sh  list_trigger.sh
evaluation/fuzzers/aflfast/: compile_env.sh  fuzz.sh
evaluation/fuzzers/fairfuzz/: compile_env.sh  fuzz.sh
evaluation/fuzzers/honggfuzz/: compile_env.sh  fuzz.sh  list_trigger.py  list_trigger.sh
format/: _clang-format  formatter
generate/: bug.py  bug_extract.py  build.py  codegen.py  config.json  convert.py  dom.py  error.py  executor.py  general.py  inject.py  main.py  mutate.py  pattern.py  piece.py  rbcode.py  reproduce.py  target.py  tracer.py  utils.py  variable.py
generate/dom/: .gitignore  CMakeLists.txt  config.h.in  dom.cpp
generate/rbcode/: racebench.c  racebench.h  racebench_bugs.c  racebench_bugs.h
inscode/: bug-general.h  bug-template.c  input-check.c  racebench.c  racebench.h
patterns/: diff-lock-order.c  disorder-depend.c  lack-of-lock.c  lock-no-release.c  non-atomic-arith.c  notify-before-wait.c  split-critical-region.c  spurious-wakeup.c  timed-wait.c
